--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@slidev/theme-apple-basic": "^0.20.0",
     "@slidev/theme-default": "*",
     "@slidev/theme-seriph": "*",
-    "slidev-theme-geist": "^0.6.0"
+    "slidev-theme-geist": "^0.6.0",
+    "vite-svg-loader": "^3.1.2"
   },
   "name": "sturm-drang"
 }
